# cmd/api/docs/swagger.yaml
@@ -325,10 +325,18 @@ definitions:
         type: integer
       address:
         type: string
+      contract_alias:
+        type: string
       network:
         type: string
       ptr:
         type: integer
+      total_keys:
+        type: integer
+      typedef:
+        items:
+          $ref: '#/definitions/docstring.Typedef'
+        type: array
     type: object
   handlers.GetErrorLocationResponse:
     properties:
@@ -457,7 +465,7 @@ definitions:
         type: string
       operations:
         items:
-          type: integer
+          $ref: '#/definitions/handlers.Operation'
         type: array
     type: object
   handlers.OperationResult:
@@ -1641,7 +1649,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: Search any data in contracts, operations and big map diff with filters
+      description: Search any data in contracts, operations and big map diff with
+        filters
       operationId: search
       parameters:
       - description: Query string
@@ -1679,11 +1688,13 @@ paths:
         in: query
         name: g
         type: integer
-      - description: 'Comma-separated list of indices for searching. Values: contract, operation, bigmapdiff'
+      - description: 'Comma-separated list of indices for searching. Values: contract,
+          operation, bigmapdiff'
         in: query
         name: i
         type: string
-      - description: 'Comma-separated list of languages for searching. Values: smartpy, liquidity, ligo, lorentz, michelson'
+      - description: 'Comma-separated list of languages for searching. Values: smartpy,
+          liquidity, ligo, lorentz, michelson'
         in: query
         name: l
         type: string
