# cmd/api/handlers/bigmap.go
@@ -34,7 +34,7 @@ func (ctx *Context) GetBigMap(c *gin.Context) {
 		return
 	}
 
-	bm, err := ctx.ES.GetBigMapKeys(req.Ptr, req.Network, "", 10000, 0)
+	bm, err := ctx.ES.GetBigMapKeys(req.Ptr, req.Network, "", 10000, 0) // TODO: >10k
 	if handleError(c, err, 0) {
 		return
 	}
@@ -184,6 +184,8 @@ func (ctx *Context) prepareBigMap(data []elastic.BigMapDiff) (res GetBigMapRespo
 	res.Address = data[0].Address
 	res.Network = data[0].Network
 	res.Ptr = data[0].Ptr
+	res.TotalKeys = uint(len(data))
+
 	for i := range data {
 		if data[i].Value != "" {
 			res.ActiveKeys++
